fix(machine): match checked signal sources