@@ -10,6 +10,7 @@ import net.minecraft.world.entity.player.Player;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -24,8 +25,8 @@ final class KeyboardInputStateTest {
         state.onMessage(node, new TestMessage("keyboard.keyUp", null, 'a', 30), player -> true);
 
         assertEquals(2, node.signals.size());
-        assertEquals(List.of("computer.checked_signal", "key_down", "keyboard", (int) 'a', 30), node.signals.get(0));
-        assertEquals(List.of("computer.checked_signal", "key_up", "keyboard", (int) 'a', 30), node.signals.get(1));
+        assertEquals(Arrays.asList("computer.checked_signal", null, "key_down", (int) 'a', 30), node.signals.get(0));
+        assertEquals(Arrays.asList("computer.checked_signal", null, "key_up", (int) 'a', 30), node.signals.get(1));
     }
 
     @Test
@@ -46,8 +47,8 @@ final class KeyboardInputStateTest {
         state.onMessage(node, new TestMessage("keyboard.clipboard", null, "alpha\nbeta"), player -> true);
 
         assertEquals(2, node.signals.size());
-        assertEquals(List.of("computer.checked_signal", "clipboard", "keyboard", "alpha"), node.signals.get(0));
-        assertEquals(List.of("computer.checked_signal", "clipboard", "keyboard", "beta"), node.signals.get(1));
+        assertEquals(Arrays.asList("computer.checked_signal", null, "clipboard", "alpha"), node.signals.get(0));
+        assertEquals(Arrays.asList("computer.checked_signal", null, "clipboard", "beta"), node.signals.get(1));
     }
 
     private record TestMessage(String name, Object... data) implements Message {
@@ -128,7 +129,7 @@ final class KeyboardInputStateTest {
         public void sendToReachable(final String name, final Object... data) {
             List<Object> signal = new ArrayList<>();
             signal.add(name);
-            signal.addAll(List.of(data));
+            signal.addAll(Arrays.asList(data));
             signals.add(signal);
         }
 
